--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout the repo
@@ -24,3 +24,21 @@ jobs:
     - name: Display SoftUni username
       run: echo 'malin97'
       
+  run_ui_test:
+      runs-on: ubuntu-latest
+      steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v4
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+          cache: 'npm'
+      - name: Install npm dependencies
+        run: npm install
+      - name: Install Playwright browsers
+        run: npx playwright install   
+      - name: Start the app
+        run: npm run start &
+      - name: Execute the UI tests
+        run: npm run test:ui
